--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-2/int01-2-2/int01-2-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-2/int01-2-2/int01-2-2.component.html
@@ -92,7 +92,7 @@
                                 <i class="arrow save icon"></i>
                             บันทึก
                         </a>
-                        <a class="ui mini primary button widtd-100">
+                        <a class="ui mini primary button widtd-100" routerLink='/int01/2/3'>
                                 <i class="file alternate icon"></i>
                             รายงานใบอนุญาต
                         </a>
