--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-4/int01-4-1/int01-4-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-4/int01-4-1/int01-4-1.component.html
@@ -1,38 +1,20 @@
 <div class="ui grid">
-  <div class="sixteen wide column">
-    <div class="ui large steps">
-      <div class="active step">
-        <i class="upload icon"></i>
-        <div class="content">
-          <div class="title">นำเข้างบทดลอง&nbsp;&nbsp;&nbsp;</div>
-        </div>
-      </div>
-      <div class="step">
-        <i class="list layout icon"></i>
-        <div class="content">
-          <div class="title">เลือกงบสรุปยอดเงินค่าภาษี</div>
-        </div>
-      </div>
-      <div class="step">
-        <i class="table icon"></i>
-        <div class="content">
-          <div class="title">แสดงผลการตรวจสอบ</div>
-        </div>
-      </div>
-    </div>
+  <div class="sixteen wide column">    
 
     <h2 class="ui header">อัพโหลดงบทดลอง</h2>
-
-    <div class="ui top attached header">
-      <span>อัพโหลดงบทดลอง</span>
-    </div>
+    <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+        <span>อัพโหลดงบทดลอง </span>
+    </div>  
 
     <div class="ui attached segment">
       <div class="ui form">
         <div class="inline fields">
-          <div class="eight wide field ">
-            <label class="custom-label-w-25">ไฟล์งบทดลอง</label>
-            <input type="file" />
+            <div class="four wide field "></div>
+          <div class="two wide field ">
+           <label>ไฟล์งบทดลอง</label>
+          </div>
+          <div class="five wide field">
+            <input type="file" name="" id="">
           </div>
         </div>
       </div>
