--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-4/int01-4-4/int01-4-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-4/int01-4-4/int01-4-4.component.html
@@ -23,7 +23,7 @@
     <div class="ui attached segment">
       <table id="table1" class="ui small celled table">
         <thead>
-          <tr>
+          <tr style="text-align: center">
             <th colspan="2">งบทดลอง</th>
             <th colspan="3">งบสรุปยอดเงินภาษี</th>
           </tr>
@@ -63,7 +63,7 @@
 <div id="modalMappingIncCode" class="ui small modal hidden transition">
   <i class="close icon"></i>
   <div class="header">
-    {{actionsModal}} จับคู่รหัสภาษี
+    {{actionsModal}} คู่รหัสภาษี
   </div>
 
   <div class="content">
