--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-4/int01-4-2/int01-4-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-4/int01-4-2/int01-4-2.component.html
@@ -1,26 +1,5 @@
 <div class="ui grid">
   <div class="sixteen wide column">
-    <div class="ui large steps">
-      <div class="step">
-        <i class="upload icon"></i>
-        <div class="content">
-          <div class="title">นำเข้างบทดลอง&nbsp;&nbsp;&nbsp;</div>
-        </div>
-      </div>
-      <div class="active step">
-        <i class="list layout icon"></i>
-        <div class="content">
-          <div class="title">เลือกงบสรุปยอดเงินค่าภาษี</div>
-        </div>
-      </div>
-      <div class="step">
-        <i class="table icon"></i>
-        <div class="content">
-          <div class="title">แสดงผลการตรวจสอบ</div>
-        </div>
-      </div>
-    </div>
-
     <h2 class="ui header">เลือกงบสรุปยอดเงินค่าภาษี</h2>
 
     <div class="ui top attached header">
@@ -31,6 +10,7 @@
     <div class="ui attached segment">
       <div class="ui form">
         <div class="inline fields">
+            <div class="three wide field "></div>
           <div class="eight wide field ">
             <label class="custom-label-w-25">สำนักงานสรรพสามิตภาค</label>
             <select name="selectZone" id="selectZone" class="ui dropdown ai">
@@ -40,7 +20,8 @@
         </div>
 
         <div class="inline fields">
-          <div class="eight wide field">
+            <div class="three wide field "></div>
+          <div class="eight wide field">          
             <label class="custom-label-w-25">สำนักงานสรรพสามิตพื้นที่</label>
             <select name="selectArea" id="selectArea" class="ui dropdown ai">
               <option *ngFor="let item of selectArea; index as i;" value="{{i+1}}">{{item.value}}</option>
@@ -50,6 +31,7 @@
 
 
         <div class="inline fields">
+            <div class="three wide field "></div>
           <div class="nine wide field">
             <label class="custom-label-w-20" style="margin-right: 5%;">วันที่จัดเก็บรายได้ ตั้งแต่</label>
             <div class="seven wide field">
@@ -71,14 +53,15 @@
       <br>
       <div class="ui center aligned grid">
         <div class="six wide column">
+            <button class="ui mini primary button" routerLink="/int01/4/1">
+              <i class="arrow circle left icon"></i>
+              ย้อนกลับ
+            </button>
           <button class="ui mini primary button" routerLink="/int01/4/3">
             <i class="checkmark box icon"></i>
             ตรวจสอบ
           </button>
-          <button class="ui mini button" routerLink="/int01/4/1">
-            <i class="arrow left icon"></i>
-            ย้อนกลับ
-          </button>
+         
         </div>
       </div>
     </div>
