--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-m3/int02-m3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-m3/int02-m3.component.html
@@ -1,4 +1,4 @@
-<app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
+<app-breadcrumb [route]="breadcrumb"></app-breadcrumb> -->
 <div class="ui modal show transition hidden" style="height: calc(6em + 15px);">
     <i class="close icon"></i>
     <div class="header">
