--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int11/int11-1/int11-1-1/int11-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int11/int11-1/int11-1-1/int11-1-1.component.html
@@ -309,7 +309,7 @@
               <i class="edit outline icon"></i>
               ปิดงาน
             </button>
-            <button class="ui mini primary button" (click)="saveData()">
+            <button class="ui mini blue button" (click)="saveData()">
               <i class="save icon"></i>
               บันทึก
             </button>
